--- a/hackathon2-frontend/index.html
+++ b/hackathon2-frontend/index.html
@@ -5,11 +5,37 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<title>Document</title>
 </head>
 <body>
-	
+	<header>
+		<div id="header">
+			<div></div>
+			<div></div>
+		</div>
+	</header>
+	<body>
+		<div id="body">
+			<div class="list1">
 
+			</div>
+			<div class="list2">
+
+			</div>
+			<div class="list3">
+
+			</div>
+		</div>
+	</body>
+	<footer>
+		<div id="footer">
+			<div></div>
+			<div></div>
+		</div>
+	</footer>
+
+	<script src="js/script.js"></script>
 	<script src="node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
