--- a/hackathon2-frontend/index.html
+++ b/hackathon2-frontend/index.html
@@ -56,23 +56,23 @@
 				  <div class="carousel-item active" data-bs-interval="50000">
 					<ul>
 						<li>
-							<a href="view.html"><img src="img/img01.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view1.html"><img src="img/img01.jpg" class="d-block w-100" alt="..."></a>
 							<div>아바타 - 물의 길</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img02.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view2.html"><img src="img/img02.jpg" class="d-block w-100" alt="..."></a>
 							<div>방탄소년단: 옛 투 컴 인...</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img03.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view3.html"><img src="img/img03.jpg" class="d-block w-100" alt="..."></a>
 							<div>교섭</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img04.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view4.html"><img src="img/img04.jpg" class="d-block w-100" alt="..."></a>
 							<div>유령</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img05.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view5.html"><img src="img/img05.jpg" class="d-block w-100" alt="..."></a>
 							<div>더 퍼스트 슬램덩크</div>
 						</li>
 					</ul>
