--- a/hackathon2-frontend/view4.html
+++ b/hackathon2-frontend/view4.html
@@ -32,8 +32,8 @@
 	</header>
 	<body>
 		<div class="view-body">
-			<div class="list1">
-				<div class="list1-one">
+			<div class="list2">
+				<div class="list2-one">
 					<ul>
 						<li>영화</li>
 						<li>예매</li>
@@ -44,8 +44,44 @@
 					</ul>
 				</div>
 
-				<div class="list1-review">
+				<div class="list2-two">
+					<div class="mainImg"><img src="img/img04.jpg"></div>
+					<div class="main-info">
+						<p>유령</p>
+						<ul>
+							<li>예매율 13.5%</li>
+							<li>감독 : 이해영 / 배우 : 
+								설경구 ,  이하늬 ,  박소담 ,  박해수 ,  서현우</li>
+							<li>장르 : 액션 / 기본 : 
+								15, 133분, 한국</li>
+							<li>개봉 : 
+								2023.01.18</li>
+							<li class="make-btn">예매하기</li>
+						</ul>
+					</div>
+				</div>
 
+				<div class="list2-review">
+					<div class="review-header">
+						<div class="review-header-text">리뷰</div>
+						<div class="star" id="f-star">별점을 선택해주세요.</div>
+						<div class="star_rating">
+							<ul>
+								<li id="star-btn1">★</li>
+								<li id="star-btn2">★</li>
+								<li id="star-btn3">★</li>
+								<li id="star-btn4">★</li>
+								<li id="star-btn5">★</li>
+							</ul>
+						</div>
+						<div class="content-input">
+							<input type="text" name="content" id="f-content" class="content">
+							<div class="content-btn" id="content-btn">등록</div>
+						</div>
+					</div>
+					<div class="review-body">
+						
+					</div>
 				</div>
 			</div>
 		</div>
@@ -66,8 +102,6 @@
 	</footer>
 
 	<script src="js/script.js"></script>
-	<script src="node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
