회원가입 기능추가

--- a/hackathon2-frontend/index2.html
+++ b/hackathon2-frontend/index2.html
@@ -14,13 +14,9 @@
 			<div class="header1">MovieBox</div>
 			<div class="header2">
 				<ul>
-					<li id="login">
+					<li id="logout">
 						<img src="img/loginPassword.png">
-						<p>로그인</p>
-					</li>
-					<li id="sign">
-						<img src="img/loginJoin.png">
-						<p>회원가입</p>
+						<p>로그아웃</p>
 					</li>
 					<li id="mybox">
 						<img src="img/loginMember.png">
@@ -157,5 +153,6 @@
 
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/script2.js"></script>
 </body>
 </html>
