--- a/hackathon2-frontend/view1.html
+++ b/hackathon2-frontend/view1.html
@@ -76,11 +76,13 @@
 						</div>
 						<div class="content-input">
 							<input type="text" name="content" id="f-content" class="content">
-							<div class="content-btn" id="content-btn">등록</div>
+							<div class="content-btn" id="add-btn">등록</div>
 						</div>
 					</div>
-					<div class="review-body">
-						
+					<div class="review-body" id="review-body">
+						<ul class="review-border">
+							<li id="review1" class="review1"></li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -101,7 +103,8 @@
 		</div>
 	</footer>
 
-	<script src="js/script.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="js/script.js"></script>
+	<script src="js/view.js"></script>
 </body>
 </html>
