--- a/hackathon2-frontend/view5.html
+++ b/hackathon2-frontend/view5.html
@@ -52,8 +52,8 @@
 							<li>예매율 6.4%</li>
 							<li>감독 : 이노우에 다케히코
 								장르 : 애니메이션 / 기본 : 
+								<li>개봉 : 
 								12, 124분, 일본</li>
-							<li>개봉 : 
 								2023.01.04</li>
 							<li class="make-btn">예매하기</li>
 						</ul>
@@ -100,7 +100,8 @@
 		</div>
 	</footer>
 
-	<script src="js/script.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="js/script.js"></script>
+	<script src="js/view.js"></script>
 </body>
 </html>
