--- a/hackathon2-frontend/sign.html
+++ b/hackathon2-frontend/sign.html
@@ -101,9 +101,8 @@
 		</div>
 	</footer>
 
-	<script src="js/script.js"></script>
-	<script src="node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="js/script.js"></script>
+	<script src="js/sign.js"></script>
 </body>
 </html>
