--- a/hackathon2-frontend/view3.html
+++ b/hackathon2-frontend/view3.html
@@ -102,7 +102,8 @@
 		</div>
 	</footer>
 
-	<script src="js/script.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="js/script.js"></script>
+	<script src="js/view.js"></script>
 </body>
 </html>
