이미지 hover 애니메이션 css

--- a/hackathon2-frontend/index.html
+++ b/hackathon2-frontend/index.html
@@ -56,23 +56,23 @@
 				  <div class="carousel-item active" data-bs-interval="50000">
 					<ul>
 						<li>
-							<a href="view1.html"><img src="img/img01.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view1.html" class="poster"><img src="img/img01.jpg" class="d-block w-100" alt="..."></a>
 							<div>아바타 - 물의 길</div>
 						</li>
 						<li>
-							<a href="view2.html"><img src="img/img02.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view2.html" class="poster"><img src="img/img02.jpg" class="d-block w-100" alt="..."></a>
 							<div>방탄소년단: 옛 투 컴 인...</div>
 						</li>
 						<li>
-							<a href="view3.html"><img src="img/img03.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view3.html" class="poster"><img src="img/img03.jpg" class="d-block w-100" alt="..."></a>
 							<div>교섭</div>
 						</li>
 						<li>
-							<a href="view4.html"><img src="img/img04.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view4.html" class="poster"><img src="img/img04.jpg" class="d-block w-100" alt="..."></a>
 							<div>유령</div>
 						</li>
 						<li>
-							<a href="view5.html"><img src="img/img05.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view5.html" class="poster"><img src="img/img05.jpg" class="d-block w-100" alt="..."></a>
 							<div>더 퍼스트 슬램덩크</div>
 						</li>
 					</ul>
@@ -80,23 +80,23 @@
 				  <div class="carousel-item" data-bs-interval="50000">
 					<ul>
 						<li>
-							<a href="view.html"><img src="img/img06.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img06.jpg" class="d-block w-100" alt="..."></a>
 							<div>영웅</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img07.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img07.jpg" class="d-block w-100" alt="..."></a>
 							<div>장화신은 고양이-끝... </div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img08.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img08.jpg" class="d-block w-100" alt="..."></a>
 							<div>오늘 밤, 세계에서...</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img09.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img09.jpg" class="d-block w-100" alt="..."></a>
 							<div>스위치</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img10.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img10.jpg" class="d-block w-100" alt="..."></a>
 							<div>프린스 챠밍</div>
 						</li>
 					</ul>
@@ -104,23 +104,23 @@
 				  <div class="carousel-item" data-bs-interval="50000">
 					<ul>
 						<li>
-							<a href="view.html"><img src="img/img11.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img11.jpg" class="d-block w-100" alt="..."></a>
 							<div>위너 2022 콘서트...</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img12.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img12.jpg" class="d-block w-100" alt="..."></a>
 							<div>웃는남자 감독판</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img13.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img13.jpg" class="d-block w-100" alt="..."></a>
 							<div>올빼미</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img14.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img14.jpg" class="d-block w-100" alt="..."></a>
 							<div>다나카 1st 내한콘서트</div>
 						</li>
 						<li>
-							<a href="view.html"><img src="img/img15.jpg" class="d-block w-100" alt="..."></a>
+							<a href="view.html" class="poster"><img src="img/img15.jpg" class="d-block w-100" alt="..."></a>
 							<div>문맨</div>
 						</li>
 					</ul>
