--- a/hackathon2-frontend/mybox.html
+++ b/hackathon2-frontend/mybox.html
@@ -59,14 +59,12 @@
 				</div>
 			</div>
 			<div class="footer-right">
-				<button class="footer-btn"><img src="img/gotoTop.png"></button>
+				<a href="#"><button class="footer-btn"><img src="img/gotoTop.png"></button></a>
 			</div>
 		</div>
 	</footer>
 
 	<script src="js/script.js"></script>
-	<script src="node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
