--- a/hackathon2-frontend/sign.html
+++ b/hackathon2-frontend/sign.html
@@ -68,14 +68,6 @@
                                 <th>닉네임</th>
                                 <td><input type="text" name="nickName" id="f-nickName"></td>
                             </tr>
-                            <tr>
-                              <th>성별</th>
-                              <td>
-                                <input type="radio" name="gender" value="W" id="f-gender-w" checked> 여성
-                                <span></span>
-                                <input type="radio" name="gender" value="M" id="f-gender-m"> 남성
-                              </td>
-                            </tr>
                           </tbody>
                         </table>
                         <button id="add-btn" type="button" class="add-btn">가입</button>
@@ -96,7 +88,7 @@
 				</div>
 			</div>
 			<div class="footer-right">
-				<button class="footer-btn"><img src="img/gotoTop.png"></button>
+				<a href="#"><button class="footer-btn"><img src="img/gotoTop.png"></button></a>
 			</div>
 		</div>
 	</footer>
