--- a/hackathon2-frontend/index.html
+++ b/hackathon2-frontend/index.html
@@ -150,7 +150,7 @@
 				</div>
 			</div>
 			<div class="footer-right">
-				<button class="footer-btn"><img src="img/gotoTop.png"></button>
+				<a href="#"><button class="footer-btn"><img src="img/gotoTop.png"></button></a>
 			</div>
 		</div>
 	</footer>
