--- a/hackathon2-frontend/view3.html
+++ b/hackathon2-frontend/view3.html
@@ -77,11 +77,24 @@
 						</div>
 						<div class="content-input">
 							<input type="text" name="content" id="f-content" class="content">
-							<div class="content-btn" id="content-btn">등록</div>
+							<input type="text" nae="password" id="f-password" class="password">
+							<div class="content-btn" id="add-btn">등록</div>
 						</div>
 					</div>
-					<div class="review-body">
-						
+					<div class="review-body" id="review-body">
+						<ul class="review-border">
+							<table border="1" class="table">
+								<thead>
+									<tr>
+										<th>번호</th>
+										<th>작성일</th>
+										<th>내용</th>
+									</tr>
+								</thead>
+								<tbody class="tbody">
+								</tbody>
+							</table>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -97,7 +110,7 @@
 				</div>
 			</div>
 			<div class="footer-right">
-				<button class="footer-btn"><img src="img/gotoTop.png"></button>
+				<a href="#"><button class="footer-btn"><img src="img/gotoTop.png"></button></a>
 			</div>
 		</div>
 	</footer>
